RDCC-4523 Sonar Issues Fixes